chore: switch to influxdb v3