@@ -287,7 +287,9 @@ tasks.withType(Test).configureEach {
     list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/sun.security.action=jdk.crypto.ec")
-    
+    list.add("--add-opens")
+    list.add("java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED")
+
     list.add("-Xms512m")
     list.add("-Xmx6g")
 
